<resources>
    <string name="app_name">project 3</string>
    <string name="textName">Username</string>
    <string name="textNickname">Nickname</string>
    <string name="password">Password</string>
    <string name="login">log In</string>
    <string name="signup">Sign Up</string>
    <string name="already_registered">Already registered? Sign In</string>
    <string name="not_registered">Not registered? Sign Up</string>
    <string name="join_now">Join Now!</string>
    <string name="welcome">Welcome!</string>
    <string name="appName">AmnonChat</string>
    <string name="type_here">Type here...</string>
    <string name="settings">settings</string>
    <string name="add_contact">add contact</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="log_out">Log Out</string>
    <string name="settings_str">Settings</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="BaseUrl">http://10.0.2.2:7033/api/</string>
    <string name="mini">Mini</string>
    <string name="wumbo">Wumbo</string>
    <string name="add">Add+</string>
    <string name="search_username">Type Username...</string>
    <string name="search">Search</string>
</resources>