<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddContact">

        <LinearLayout
            android:id="@+id/addContactBar"
            android:layout_width="match_parent"

            android:layout_height="78dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageButton
                android:id="@+id/addContactBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"
                app:srcCompat="@android:drawable/ic_menu_revert" />

            <TextView

                android:id="@+id/addText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="66"
                android:background="@color/red"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"
                android:text="@string/add" />

        </LinearLayout>


    <LinearLayout
        android:id="@+id/search"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addContactBar"
        app:layout_constraintVertical_bias="0.044">

        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/search_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:backgroundTint="@color/red"


            android:text="@string/search" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>